# StreamCab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yml  docker-compose.yml  justfile  pyproject.toml
apps/app/: Dockerfile
apps/consumer/: consume_to_postgres.py
apps/dashboard/: app.py
apps/predictor/: predict_realtime.py
apps/producer/: Dockerfile  producer.py
apps/spark/: stream_processor.py
apps/trainer/: Dockerfile  train_models.py
assets/: architecture.drawio
data/: raw-data
data/models/: metrics.json  realtime_predictions.parquet  realtime_predictions_summary.json  traffic_model.joblib
data/reference/: zone_centroids.csv
docker/: init.sql
models/: .gitignore
notes/: Makefile  streamcab_presentation.tex  streamcab_report.tex
reports/: streamcab_presentation.pptx  streamcab_presentation.tex  streamcab_report.tex
scripts/: convert-to-csv.py  download_tlc_data.py
src/streamcab/: __init__.py
